--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -51,13 +51,7 @@
 
         </com.google.android.material.appbar.CollapsingToolbarLayout>
 
-        <com.mancj.materialsearchbar.MaterialSearchBar
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginHorizontal="@dimen/horizontal_sm"
-            app:mt_maxSuggestionsCount="10"
-            app:mt_placeholder="Search events..."
-            app:mt_speechMode="false" />
+        <!-- Search -->
 
     </com.google.android.material.appbar.AppBarLayout>
 
@@ -67,7 +61,7 @@
         app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">
 
         <fragment
-            android:id="@+id/main_fragment"
+            android:id="@+id/fragment_main_activity"
             android:name="androidx.navigation.fragment.NavHostFragment"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -92,7 +86,7 @@
         app:layout_scrollFlags="scroll|enterAlways">
 
         <com.google.android.material.bottomnavigation.BottomNavigationView
-            android:id="@+id/navigation"
+            android:id="@+id/bottom_navigation_bar"
             style="@style/Widget.MaterialComponents.BottomNavigationView.Colored"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -108,6 +102,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:src="@drawable/ic_round_menu_24"
-        app:layout_anchor="@id/navigation" />
+        app:layout_anchor="@id/bottom_navigation_bar" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
