--- a/app/src/main/res/layout/activity_onboard.xml
+++ b/app/src/main/res/layout/activity_onboard.xml
@@ -7,7 +7,7 @@
     tools:context=".activities.OnboardActivity">
 
     <ImageView
-        android:id="@+id/iv_splash"
+        android:id="@+id/imageview_onboard_background"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:scaleType="centerCrop"
