--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -4,13 +4,14 @@
     <!-- basis -->
 
     <style name="Theme.DT" parent="Theme.MaterialComponents.DayNight">
-        <item name="android:fontFamily">@font/inter_semibold</item>
-        <item name="windowNoTitle">true</item>
-        <item name="windowActionBar">false</item>
-
         <item name="colorPrimary">@color/primary</item>
         <item name="colorPrimaryVariant">@color/primary_variant</item>
-        <item name="colorOnPrimary">@color/color_on_primary</item>
+        <item name="colorSecondary">@color/secondary</item>
+        <item name="colorSecondaryVariant">@color/secondary_variant</item>
+        <item name="colorOnSecondary">@color/color_on_secondary</item>
+        <item name="windowNoTitle">true</item>
+        <item name="windowActionBar">false</item>
+        <item name="android:fontFamily">@font/inter_semibold</item>
     </style>
 
     <style name="Theme.DT.Window.Translucent" parent="Theme.DT.DayNight">
@@ -25,13 +26,12 @@
     <style name="Theme.DT.Text.Onboard1" parent="TextAppearance.AppCompat.Body1">
         <item name="android:textSize">32sp</item>
         <item name="android:fontFamily">@font/inter_extrabold</item>
-        <item name="android:textColor">@color/text_on_night</item>
         <item name="android:alpha">0.90</item>
     </style>
 
     <style name="Theme.DT.Text.Onboard2" parent="TextAppearance.AppCompat.Body2">
         <item name="android:textSize">20sp</item>
-        <item name="android:textColor">@color/text_on_night</item>
         <item name="android:alpha">0.65</item>
     </style>
+
 </resources>
