--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,107 +1,64 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <com.google.android.material.appbar.AppBarLayout
+    <androidx.coordinatorlayout.widget.CoordinatorLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="?android:statusBarColor">
+        android:layout_height="wrap_content">
 
-        <com.google.android.material.appbar.CollapsingToolbarLayout
+        <com.google.android.material.appbar.AppBarLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:contentScrim="?android:statusBarColor"
-            app:layout_scrollFlags="scroll|enterAlways|snap">
+            android:background="?android:statusBarColor">
 
-            <androidx.appcompat.widget.Toolbar
-                android:id="@+id/toolbar"
+            <com.google.android.material.appbar.CollapsingToolbarLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginHorizontal="@dimen/horizontal_xl"
-                app:contentInsetEnd="0dp"
-                app:contentInsetStart="0dp"
-                app:layout_collapseMode="pin">
+                app:contentScrim="?android:statusBarColor"
+                app:layout_scrollFlags="scroll|enterAlways|snap">
 
-                <LinearLayout
+                <androidx.appcompat.widget.Toolbar
+                    android:id="@+id/toolbar"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:gravity="center_vertical">
+                    app:contentInsetEnd="@dimen/horizontal_m"
+                    app:contentInsetStart="@dimen/horizontal_m">
 
-                    <TextView
-                        android:id="@+id/hero"
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:ellipsize="end"
-                        android:maxLines="1"
-                        android:text="@string/app_name" />
+                </androidx.appcompat.widget.Toolbar>
 
-                    <com.makeramen.roundedimageview.RoundedImageView
-                        android:id="@+id/image_avatar"
-                        android:layout_width="26dp"
-                        android:layout_height="26dp"
-                        android:src="@drawable/ic_launcher_background"
-                        app:riv_corner_radius="@dimen/corner_radius_square" />
+            </com.google.android.material.appbar.CollapsingToolbarLayout>
 
-                </LinearLayout>
+        </com.google.android.material.appbar.AppBarLayout>
 
-            </androidx.appcompat.widget.Toolbar>
-
-        </com.google.android.material.appbar.CollapsingToolbarLayout>
-
-        <!-- Search -->
-
-    </com.google.android.material.appbar.AppBarLayout>
-
-    <androidx.core.widget.NestedScrollView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">
-
-        <fragment
-            android:id="@+id/fragment_main_activity"
-            android:name="androidx.navigation.fragment.NavHostFragment"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            app:defaultNavHost="true"
-            app:navGraph="@navigation/main_navigation" />
-
-    </androidx.core.widget.NestedScrollView>
-
-    <com.google.android.material.bottomappbar.BottomAppBar
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom"
-        app:backgroundTint="?android:navigationBarColor"
-        app:contentInsetEnd="0dp"
-        app:contentInsetStart="0dp"
-        app:fabAlignmentMode="center"
-        app:fabAnimationMode="scale"
-        app:fabCradleMargin="14dp"
-        app:fabCradleRoundedCornerRadius="@dimen/corner_radius_fab"
-        app:fabCradleVerticalOffset="@dimen/vertical_xl"
-        app:hideOnScroll="true"
-        app:layout_scrollFlags="scroll|enterAlways">
-
-        <com.google.android.material.bottomnavigation.BottomNavigationView
-            android:id="@+id/bottom_navigation_bar"
-            style="@style/Widget.MaterialComponents.BottomNavigationView.Colored"
+        <androidx.core.widget.NestedScrollView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingVertical="@dimen/vertical_sm"
-            app:itemRippleColor="@null"
-            app:labelVisibilityMode="selected"
-            app:menu="@menu/bottom_navigation_menu" />
+            android:layout_marginBottom="?actionBarSize"
+            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">
 
-    </com.google.android.material.bottomappbar.BottomAppBar>
+            <fragment
+                android:id="@+id/fragment_main_activity"
+                android:name="androidx.navigation.fragment.NavHostFragment"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_above="@id/bottom_navigation_bar"
+                app:defaultNavHost="true"
+                app:navGraph="@navigation/main_navigation" />
 
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/btn_menu"
+        </androidx.core.widget.NestedScrollView>
+
+    </androidx.coordinatorlayout.widget.CoordinatorLayout>
+
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/bottom_navigation_bar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:src="@drawable/ic_round_menu_24"
-        app:layout_anchor="@id/bottom_navigation_bar" />
+        android:layout_alignParentBottom="true"
+        app:backgroundTint="?android:navigationBarColor"
+        app:itemBackground="?selectableItemBackground"
+        app:labelVisibilityMode="unlabeled"
+        app:menu="@menu/bottom_navigation_menu" />
 
-</androidx.coordinatorlayout.widget.CoordinatorLayout>
+</RelativeLayout>
