--- a/app/src/main/res/menu/bottom_navigation_menu.xml
+++ b/app/src/main/res/menu/bottom_navigation_menu.xml
@@ -5,25 +5,26 @@
     <item
         android:id="@+id/navigation_dashboard"
         android:icon="@drawable/ic_outline_space_dashboard_24"
-        android:title="@string/nav_1"
-        app:showAsAction="ifRoom" />
-
-    <item
-        android:id="@+id/navigation_explore"
-        android:icon="@drawable/ic_outline_explore_24"
-        android:title="@string/nav_2"
-        app:showAsAction="ifRoom" />
+        android:title="Dashboard" />
 
     <item
         android:id="@+id/navigation_notification"
         android:icon="@drawable/ic_round_notifications_none_24"
-        android:title="@string/nav_3"
-        app:showAsAction="ifRoom" />
+        android:title="Notification" />
+
+    <item
+        android:id="@+id/navigation_search"
+        android:icon="@drawable/ic_round_search_24"
+        android:title="Search" />
+
+    <item
+        android:id="@+id/navigation_explore"
+        android:icon="@drawable/ic_outline_explore_24"
+        android:title="Explore" />
 
     <item
         android:id="@+id/navigation_account"
         android:icon="@drawable/ic_outline_account_circle_24"
-        android:title="@string/nav_4"
-        app:showAsAction="ifRoom" />
+        android:title="Account" />
 
 </menu>
