--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -4,14 +4,13 @@
     <!-- basis -->
 
     <style name="Theme.DT.DayNight" parent="Theme.DT">
-        <item name="colorSecondary">@color/secondary_night</item>
-        <item name="colorSecondaryVariant">@color/secondary_variant_night</item>
-        <item name="colorOnSecondary">@color/color_on_secondary_night</item>
-        <item name="android:statusBarColor" tools:targetApi="23">@color/background_status_night
+        <item name="colorOnPrimary">@color/color_on_primary_night</item>
+        <item name="android:statusBarColor" tools:targetApi="23">
+            @color/background_status_night
         </item>
-        <item name="android:windowBackground">@color/background_night</item>
-        <item name="android:navigationBarColor">@color/background_nav_night</item>
         <item name="android:windowLightStatusBar" tools:targetApi="23">false</item>
+        <item name="android:navigationBarColor">@color/background_nav_night</item>
+        <item name="android:windowBackground">@color/background_night</item>
     </style>
 
     <!-- text -->
